--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-  <title> Schedule </title>
+  <title>schedule</title>
 </head>
 
 <body>
   <table style="border: 2px solid black; border-collapse: collapse>
     <thead>
       <tr>
-        <th style="border: 2px solid black; border-collapse: collapse;">every day I do these</th>
+        <th style="border: 2px solid black; border-collapse: collapse;">my everyday schedule</th>
       </tr>
       <thead>
       <tbody>
